--- a/index.ipynb
+++ b/index.ipynb
@@ -199,16 +199,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['USA', 'Argentina', 'Mexico']"
+       "['USA', 'Argentina', 'Mexico', 'USA']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,7 +238,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "None # add code here"
+    "countries.append[] # add code here"
    ]
   },
   {
