--- a/index.ipynb
+++ b/index.ipynb
@@ -250,7 +250,7 @@
     }
    ],
    "source": [
-    "countries.append['Malta'] # add code here"
+    "countries.append('Matal')'Malta'] # add code here"
    ]
   },
   {
