Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -254,7 +254,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "count # add code here"
+    "countries.append('Tha') # add code here"
    ]
   },
   {
