--- a/index.ipynb
+++ b/index.ipynb
@@ -309,11 +309,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'New Mexico'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "countries[] # add code here"
+    "countries[6] # add code here"
    ]
   },
   {
