--- a/index.ipynb
+++ b/index.ipynb
@@ -324,7 +324,8 @@
     }
    ],
    "source": [
-    "countries[6] # add code here"
+    "countries[6] # add code here\n",
+    "countries[6] = "
    ]
   },
   {
