--- a/index.ipynb
+++ b/index.ipynb
@@ -309,23 +309,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'New Mexico'"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "countries[6] # add code here\n",
-    "countries[6] = "
+    "countries[6] = \"USA\""
    ]
   },
   {
